--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,13 +13,18 @@
 
 <!-- Fragment #2 : Navbar contains nav links -->
 <div th:fragment="nav">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#" th:href="@{/index}">Catalog Manager</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{~/index}"><i class="fa fa-home"></i>Home</a>
+                    <a class="nav-link" href="#" th:href="@{/home}"><i class="fa fa-home"></i>Home</a>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item">
                     <a class="nav-link" href="#" th:href="@{/products}"><i class="fa fa-list"></i>Product List</a>
@@ -35,8 +40,8 @@
             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/logout}">
                 <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout <i class="fas fa-sign-out-alt"></i></button>
             </form>
-            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/index}">
-                <button sec:authorize="isAnonymous()" href="#" th:href="@{/index}" class="btn btn-outline-success my-2 my-sm-0 btn-sm" type="submit">Login <i class="fas fa-sign-in-alt"></i></button>
+            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/home}">
+                <button sec:authorize="isAnonymous()" href="#" th:href="@{/home}" class="btn btn-outline-success my-2 my-sm-0 btn-sm" type="submit">Login <i class="fas fa-sign-in-alt"></i></button>
             </form>
         </div>
     </nav>
