--- a/src/main/resources/templates/logout_msg.html
+++ b/src/main/resources/templates/logout_msg.html
@@ -6,7 +6,7 @@
 <body>
     <div th:insert="fragments.html::nav"></div>
     <div class="container">
-        <div style="width:400px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
+        <div style="width:410px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
             <div class="card">
                 <div class="card-header">
                     <!--<i class="fa fa-user"></i>--> Logout
@@ -15,7 +15,9 @@
                     <form name="f" >
                       <fieldset>
                         <div  class="alert alert-success">
-                            You have been logged out.
+                            <h5 align="center">You are now logged out.</h5>
+                            <hr>
+                            Didn't mean to log out? <a href="/login.html">Log in again</a>.
                         </div>
                       </fieldset>
                     </form>
