--- a/src/main/resources/templates/create_product.html
+++ b/src/main/resources/templates/create_product.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="fragments.html::headerfiles">
+<head th:replace="fragments.html::headerfiles(~{::title},~{::link})">
     <title>Create Product</title>
+    <link>
 </head>
 <body>
     <div th:insert="fragments.html::nav"></div>
@@ -206,7 +207,8 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
-<script src="/webjars/bootstrap/4.3.1/js/bootstrap.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.js}"></script>
+    <th:block th:replace="fragments.html :: scripts(~{::script})">
+        <script></script>
+    </th:block>
 </body>
 </html>
