--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,11 +3,13 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <!-- Fragment #1 : Header files contains css and js references -->
-<head th:fragment="headerfiles">
-    <title>Catalog Manager</title>
+<head th:fragment="headerfiles(title,links)">
+    <title th:replace="${title}">Catalog Manager</title>
     <meta charset="UTF-8"/>
     <link th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.css}" rel="stylesheet">
     <link th:href="@{/webjars/font-awesome/5.9.0/css/all.css}" rel="stylesheet">
+    <!--/* Per-page placeholder for additional links */-->
+    <th:block  th:replace="${links}" />
 </head>
 <body>
 
@@ -65,15 +67,14 @@
 </div>
 
 <!-- Fragment #4 : (not using yet) -->
-<div th:fragment="image">
+<th:block th:fragment="scripts(script)">
+    <script  src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.bundle.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.bundle.min.js}"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.js}"></script>
+    <!--/* Per-page placeholder for additional links */-->
+    <th:block th:replace="${script}" />
+</th:block>
 
-</div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script th:fragment="scriptj" src="/webjars/jquery/3.0.0/jquery.min.js"></script>
-<script src="/webjars/bootstrap/4.3.1/js/bootstrap.bundle.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.bundle.min.js}"></script>
-<script src="/webjars/bootstrap/4.3.1/js/bootstrap.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.js}"></script>
 </body>
 </html>
