--- a/src/main/resources/templates/list_products.html
+++ b/src/main/resources/templates/list_products.html
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="fragments.html::headerfiles">
-    <title>Title</title>
+<head th:replace="fragments.html::headerfiles(~{::title},~{::link})">
+    <title>Manager</title>
+    <link rel="stylesheet" type="text/css" media="all"
+          th:href="@{/css/products-list-style.css}"/>
 </head>
 <body>
-<div th:insert="fragments.html :: nav"></div>
+<div th:replace="fragments.html :: nav">
+</div>
+<button type="button" id="sidebarCollapse" class="btn btn-info">
+    <i class="fas fa-align-left"></i>
+    <span>Toggle Sidebar</span>
+</button>
 
 <div class="btn-group my-2  my-lg-0" role="group" aria-label="View Type" align="right">
     <a type="button" role="button" class="btn btn-secondary my-2 my-sm-0"  th:href="@{/products(view=list)}"><i class="fas fa-bars"></i></a>
     <a type="button" role="button" class="btn btn-secondary my-2 my-sm-0"  th:href="@{/products(view=images)}"><i class="far fa-images"></i></a>
 
 </div>
-<div >
+<div class="wrapper">
+    <!-- Sidebar  -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>Bootstrap Sidebar</h3>
+            <strong>BS</strong>
+        </div>
+
+        <ul class="list-unstyled components">
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-home"></i>
+                    Home
+                </a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a href="#">Home 1</a>
+                    </li>
+                    <li>
+                        <a href="#">Home 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Home 3</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fas fa-briefcase"></i>
+                    About
+                </a>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-copy"></i>
+                    Pages
+                </a>
+                <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <li>
+                        <a href="#">Page 1</a>
+                    </li>
+                    <li>
+                        <a href="#">Page 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Page 3</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+
+    </nav>
+
+    <!-- Page Content  -->
+   <!-- List -->
+<div id="content">
     <div th:if="${viewType} == ${enumList}">
         <table class="table table-striped table-bordered table-hover">
             <thead class="thead-dark" align="center">
@@ -135,12 +195,13 @@
         -->
     </div>
 </div>
-
+</div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
-<script src="/webjars/bootstrap/4.3.1/js/bootstrap.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.js}"></script>
+<th:block th:replace="fragments.html :: scripts(~{::script})">
+    <script th:inline="javascript" th:src="@{/js/products-list.js}"></script>
+</th:block>
 </body>
 </html>
