- update UserController path and add new page to creat eedit an show profile of the user

--- a/src/main/resources/templates/create_product.html
+++ b/src/main/resources/templates/create_product.html
@@ -113,7 +113,7 @@
                                     </div>
                                 </fieldset>
                                 <div class="card-footer text-center">
-                                    <input class="btn btn-success " style="width: 150px;margin-right: 30px" type="submit" id="submitButton" th:value="Save">
+                                    <input class="btn btn-success " style="width: 150px;margin-right: 30px" type="submit" id="submitButton" th:value="Save"/>
                                     <input class="btn  btn-danger" style="width: 150px" type="reset" id="resetButton" name="reset" th:value="Reset"/>
                                 </div> 
                             </form>
