--- a/src/main/resources/templates/user/user_edit.html
+++ b/src/main/resources/templates/user/user_edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html::headerfiles(~{::title},~{::link})">
-    <title>User</title>
+    <title>Create User</title>
     <link>
 </head>
 <body>
