--- a/src/main/resources/templates/user/user_profile.html
+++ b/src/main/resources/templates/user/user_profile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:insert="fragments.html::headerfiles">
-    <title>Log in</title>
+<head th:replace="fragments.html::headerfiles(~{::title},~{::link})">
+    <title>User Profile</title>
+    <link>
 </head>
-<body>
 <div th:insert="fragments.html::nav"></div>
 <div class="container ">
     <div style="width:400px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
